stderr
PrinterTest.java:3: error: '.' expected
import FizzBuzz;
               ^
1 error
